--- a/walter.css
+++ b/walter.css
@@ -211,10 +211,37 @@ body {
 }
 
 @media (max-width: 768px) {
-  .nav {
-    flex-direction: column;
-    align-items: center;
+  .photogrid {
+    grid-template-columns: 1fr;
+    padding-left: 0;
   }
+
+  .banner img,
+  .click img {
+    width: 100%;
+    padding-left: 0;
+  }
+
+  .lastinfo {
+    width: 90%;
+    padding: 5%;
+  }
+
+  .textname {
+    font-size: 2em;
+  }
+
+  .text2 {
+    font-size: 1.2em;
+    padding-top: 0;
+  }
+
+  nav ul {
+    flex-direction: column;
+    gap: 1rem;
+  }
+}
+
 
 
 
