--- a/walter.css
+++ b/walter.css
@@ -211,36 +211,89 @@ body {
 }
 
 @media (max-width: 768px) {
-  .photogrid {
-    grid-template-columns: 1fr;
-    padding-left: 0;
+  body {
+    font-size: 16px;
+    background-size: cover;
+    background-position: center;
+    margin: 0;
+    padding: 0;
   }
 
+  .navbar {
+    padding: 0.5rem;
+  }
+
+  .navbar ul {
+    flex-direction: column;
+    gap: 1rem;
+    padding: 0;
+    margin: 0;
+    text-align: center;
+  }
+
+  .textname {
+    font-size: 1.5em;
+    padding: 10px;
+    text-align: center;
+  }
+
+  .text2 {
+    font-size: 1.2em;
+    padding: 10px;
+    text-align: center;
+  }
+
+  .photowebsite img,
+  .photogrid img,
+  .photogrid2 img,
   .banner img,
   .click img {
     width: 100%;
+    height: auto;
+    margin: 10px auto;
+    display: block;
+  }
+
+  .photogrid {
+    grid-template-columns: 1fr;
     padding-left: 0;
+    justify-content: center;
+  }
+
+  .photogrid2 {
+    grid-template-columns: 1fr;
+    padding-left: 0;
+    justify-content: center;
+  }
+
+  .info h2 {
+    font-size: 1em;
+    padding: 10px;
+    text-align: center;
   }
 
   .lastinfo {
     width: 90%;
     padding: 5%;
+    font-size: 1em;
+    margin: 20px auto;
+    text-align: center;
   }
 
-  .textname {
-    font-size: 2em;
+  .img-hover {
+    width: 100%;
   }
 
-  .text2 {
-    font-size: 1.2em;
-    padding-top: 0;
+  #loading img {
+    width: 200px;
   }
 
-  nav ul {
-    flex-direction: column;
-    gap: 1rem;
+  .loading-content p {
+    font-size: 1em;
   }
 }
+
+
 
 
 
