--- a/test.css
+++ b/test.css
@@ -91,10 +91,10 @@ body {
     justify-items: center;
     align-items: center;
     gap: 0;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     font-size: 0;
-    padding-left: 500px;
+    padding-left: 0;
     
 }
 
@@ -264,11 +264,14 @@ body {
     display: block;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    padding-left: 0;
+    margin: 0 auto;
+    display: block;
   }
 
   .photogrid {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
     gap: 10px;
     padding: 10px;
   }
