--- a/test.css
+++ b/test.css
@@ -267,13 +267,15 @@ body {
     padding-left: 0;
     margin: 0 auto;
     display: block;
+    object-fit: cover;
   }
 
   .photogrid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+    grid-template-columns: repeat(3, minmax(200px, 1fr));
     gap: 10px;
     padding: 10px;
+    overflow-x: auto;
   }
 
   .photogrid2 {
