--- a/test.css
+++ b/test.css
@@ -85,6 +85,12 @@ body {
     
 }
 
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+}
+
 .photogrid {
     display: grid;
     grid-template-columns: repeat(3,300px);
