--- a/test.css
+++ b/test.css
@@ -96,7 +96,7 @@ body {
     grid-template-columns: repeat(3,300px);
     justify-items: center;
     align-items: center;
-    gap: 0;
+    gap: 20px;
     margin: 0 auto;
     padding: 0;
     font-size: 0;
