--- a/test.css
+++ b/test.css
@@ -216,7 +216,7 @@ body {
   100% { opacity: 0.2; }
 }
 
-@media (max-width: 768px) {
+@media screen and (orientation: landscape) and (max-width: 768px) {
   * {
     box-sizing: border-box;
   }
@@ -229,13 +229,12 @@ body {
     background-position: center;
   }
 
-  .navbar ul {
+.navbar ul {
   display: flex;
-  flex-direction: column;        /* เรียงแนวตั้ง */
-  align-items: center;           /* จัดกลาง */
-  gap: 1rem;                     /* ระยะห่างระหว่างเมนู */
-  padding: 0;
-  margin: 0;
+  flex-wrap: nowrap;
+  overflow-x: auto;
+  gap: 1rem;
+  padding: 10px;
   list-style: none;
 }
 
