--- a/test.css
+++ b/test.css
@@ -286,7 +286,7 @@ body {
     font-size: 1em;
     padding: 12px;
     text-align: center;
-    color: yellow;
+    color: white;
     background-color: black;
     width: 90%;
     margin: 20px auto;
@@ -297,6 +297,15 @@ body {
     box-shadow: 0 0 8px rgba(0,0,0,0.3);
   }
 
+.info h2 {
+  font-size: 1.4em;
+  color: #f5f5f5;
+  text-align: center;
+  padding: 16px;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+  line-height: 1.6;
+  font-weight: 500;
+}
 
 
 
