--- a/test.css
+++ b/test.css
@@ -274,6 +274,14 @@ body {
     padding: 10px;
   }
 
+    .photogrid img {
+    max-width: 100px;
+    height: auto;
+    object-fit: cover;
+    border-radius: 6px;
+    box-shadow: 0 0 6px rgba(0,0,0,0.2);
+  }
+
   .photogrid2 {
     display: grid;
     grid-template-columns: 1fr;
@@ -305,6 +313,7 @@ body {
   text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
   line-height: 1.6;
   font-weight: 500;
+  color:yellow;
 }
 
 
