--- a/test.css
+++ b/test.css
@@ -96,7 +96,7 @@ body {
     grid-template-columns: repeat(3,300px);
     justify-items: center;
     align-items: center;
-    gap: 5;
+    gap: 10px;
     margin: 0 auto;
     padding: 0;
     max-width: 1000px;
