--- a/test.css
+++ b/test.css
@@ -121,7 +121,7 @@ body {
     width: 300px;
     border: none;
     display: block;
-    margin: 0;
+    margin: 3px 0;
     padding: 0;
     height: auto;
     object-fit: cover;
