--- a/backendskill.css
+++ b/backendskill.css
@@ -313,6 +313,71 @@ body {
   height: auto;
 }
 
+@media (max-width: 768px) {
+
+  body {
+    font-size: medium;
+    background-size: cover;
+    padding: 0 10px;
+  }
+
+  .navbar {
+    padding: 0.5rem;
+  }
+
+  nav ul {
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+  }
+
+  .home-content {
+    flex-direction: column;
+    align-items: center;
+    padding: 0;
+  }
+
+  #main-img {
+    position: static;
+    width: 180px;
+    margin-bottom: 20px;
+    transform: none;
+  }
+
+  .right-column {
+    padding-top: 40px;
+    padding-right: 0;
+    width: 100%;
+    align-items: center;
+  }
+
+  .skill-grid,
+  .extra-skill-grid,
+  .final-skill-grid {
+    margin-left: 0;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 40px;
+    padding: 4%;
+  }
+
+  .skill-grid img {
+    width: 140px;
+  }
+
+  .extra-skill-grid img {
+    width: 50px;
+  }
+
+  .final-skill-grid img {
+    width: 60px;
+  }
+
+  .skill-text {
+    font-size: 28px;
+    top: 10px;
+  }
+
+}
 
 
 
@@ -336,6 +401,7 @@ body {
     
     
     
+
 
 
 
