--- a/backendskill.css
+++ b/backendskill.css
@@ -343,6 +343,11 @@ body {
     margin-bottom: 20px;
     transform: scale(1.02); 
   }
+    #main-img:hover {
+    transform: scale(1.02); 
+    box-shadow: none;
+  }
+
 
   .right-column {
     padding-top: 40px;
@@ -401,6 +406,7 @@ body {
     
     
     
+
 
 
 
