--- a/backendskill.css
+++ b/backendskill.css
@@ -363,8 +363,7 @@ body {
     padding: 4%;
   }
 
-  .extra-skill-grid,
-  .final-skill-grid {
+  .extra-skill-grid {
     grid-template-columns: repeat(4, 1fr);
     flex-wrap: wrap;
     gap: 24px;
@@ -373,6 +372,17 @@ body {
     justify-items: center;
     align-items: center;
   }
+
+    .final-skill-grid{
+     grid-template-columns: repeat(4, 1fr);
+    flex-wrap: wrap;
+    gap: 24px;
+    margin-left: 8px;
+    padding: 4%;
+    justify-items: center;
+    align-items: center;
+    }
+    
     
 
 
@@ -430,6 +440,7 @@ body {
     
     
     
+
 
 
 
