--- a/backendskill.css
+++ b/backendskill.css
@@ -410,6 +410,11 @@ body {
     margin: auto;
   }
 
+.home-image{
+    display: flex;
+  justify-content: center;
+}
+
 }
 
 
@@ -435,6 +440,7 @@ body {
     
     
     
+
 
 
 
