--- a/backendskill.css
+++ b/backendskill.css
@@ -404,6 +404,12 @@ body {
   justify-content: center;
 }
 
+    #main-img 
+    { display: block; 
+     margin: 10px auto; 
+     width: 120px; 
+     height: 120px;
+
 }
 
 
@@ -429,6 +435,7 @@ body {
     
     
     
+
 
 
 
