--- a/backendskill.css
+++ b/backendskill.css
@@ -404,11 +404,13 @@ body {
   justify-content: center;
 }
 
-    #main-img 
-    { display: block; 
+    #main-img { 
+    display: block; 
      margin: 10px auto; 
      width: 120px; 
      height: 120px;
+
+    }
 
 }
 
@@ -435,6 +437,7 @@ body {
     
     
     
+
 
 
 
