--- a/backendskill.css
+++ b/backendskill.css
@@ -314,14 +314,14 @@ body {
 }
 
 @media (max-width: 768px) {
-  .home-image {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    padding: 0;
-    margin: 0 auto;
-  }
+.home-image {
+  width: 100%;
+  max-width: 100%;
+  margin: 0 auto;
+  text-align: center;
+  flex-direction: column;
+}
+
 
   #main-img {
     display: block;
@@ -357,11 +357,12 @@ body {
     align-items: center;
   }
 
-  .home-content {
-    flex-direction: column;
-    align-items: center;
-    padding: 0;
-  }
+.home-content,
+.two-column-layout {
+  padding-left: 0;
+  margin-left: 0;
+}
+
 
 
 
@@ -421,17 +422,6 @@ body {
   }
 
 
-
- 
-
-
-
-.two-column-layout {
-  flex-direction: column;
-  align-items: center;
-  padding: 0;
-}
-
 .home-image {
   outline: 2px dashed blue;
 }
@@ -466,6 +456,7 @@ body {
     
     
     
+
 
 
 
