--- a/backendskill.css
+++ b/backendskill.css
@@ -315,6 +315,7 @@ body {
 
 @media (max-width: 768px) {
 .home-image {
+ display: flex !important;
   width: 100%;
   max-width: 100%;
   margin: 0 auto;
@@ -456,6 +457,7 @@ body {
     
     
     
+
 
 
 
