--- a/backendskill.css
+++ b/backendskill.css
@@ -232,7 +232,7 @@ body {
   justify-items: center; /* จัดภาพให้อยู่กลางช่อง */
   align-items: center;
   padding: 2%;
-  font-size: 0;
+  font-size: 10px;
   line-height: 0;
   margin-left: 280px;
   z-index: 1;
@@ -457,6 +457,7 @@ body {
     
     
     
+
 
 
 
