--- a/backendskill.css
+++ b/backendskill.css
@@ -362,6 +362,7 @@ body {
 .two-column-layout {
   padding-left: 0;
   margin-left: 0;
+  font-size: 18px;
 }
 
 
@@ -457,6 +458,7 @@ body {
     
     
     
+
 
 
 
