--- a/backendskill.css
+++ b/backendskill.css
@@ -374,7 +374,7 @@ body {
 
   .skill-text {
     font-size: 18px;
-    margin-top: -58px;
+    margin-top: -28px;
     text-align: center;
     position: static;
     transform: none;
@@ -434,6 +434,9 @@ body {
   text-align: left;
 }
 
+.right-column {
+  margin-top: -24px;
+}
 
 
 .home-image {
@@ -472,6 +475,7 @@ body {
     
     
     
+
 
 
 
