--- a/backendskill.css
+++ b/backendskill.css
@@ -436,20 +436,24 @@ body {
 
 .right-column {
   margin-top: -150px;
+  margin-left: 16px;
+}
+
+.home-image { 
+  outline: 2px dashed blue; 
+
+}
+
+
+    
+
+
+
 }
 
 
 
 
-    
-
-
-
-}
-
-
-
-
 
 
 
@@ -470,6 +474,7 @@ body {
     
     
     
+
 
 
 
