--- a/backendskill.css
+++ b/backendskill.css
@@ -440,11 +440,6 @@ body {
 }
 
 @media screen and (orientation: landscape) {
-  body {
-    pointer-events: none;
-    opacity: 0.3;
-  }
-
   body::before {
     content: "กรุณาหมุนจอกลับเป็นแนวตั้งเพื่อใช้งานเว็บไซต์";
     display: block;
@@ -460,6 +455,20 @@ body {
     padding-top: 40px;
     z-index: 9999;
   }
+
+  body > * {
+    visibility: hidden;
+  }
+}
+
+@media screen and (orientation: portrait) {
+  body > * {
+    visibility: visible;
+  }
+
+  body::before {
+    content: none;
+  }
 }
 
 
@@ -495,6 +504,7 @@ body {
     
     
     
+
 
 
 
